# Controls-BootCamp_Python

./: .gitignore  01_02_Overview_and_Linear_systems_harish.ipynb  03_ControlSysBootcamp_Linearizing_arnd_fix.ipynb  03_Stability_and _Eigvalues.ipynb  04_ControlSysBootcamp_Linearizing_arnd_fix.ipynb  04_ControlSysBootcamp_Stability_and _Eigval.ipynb  04_Linearizing_around_Fixed_Point.ipynb  05_06_CBENP2AEL17003_Videos.ipynb  05_06_Controllability.ipynb  07_08_ControlVideo_Rutuja.ipynb  09_10_Controllability_CBENP2AEL17006.ipynb  11_12_Cayley–Hamilton theorem_CBENP2AEL17007.ipynb  Change.md  ControlBootcamp.yml  OnAnimation.ipynb  OnSymPy.ipynb  README.md  double_pendulum.ipynb  environment.yml  pyproject.toml
images/: InvertedPendulum.jl
topics/: OnAnimation.ipynb  OnSymPy.ipynb  SimpleHarminicMotion.ipynb  SimplePendulum.ipynb
